--- a/src/Component/Login/index.css
+++ b/src/Component/Login/index.css
@@ -14,6 +14,17 @@
     
     
 }
+.button{
+    background-color: aliceblue;
+    height: fit-content;
+    width: fit-content;
+    border:none;
+
+}
+
+    
+    
+
 .icons1{
     padding: 10px;
     margin-top: 10px;
