--- a/src/Component/FilterSection/index.css
+++ b/src/Component/FilterSection/index.css
@@ -2,5 +2,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin:20px;
+    gap:10px;
+    
+}
+.product-button{
+    height:30px;
+    width:100px;
+    border-radius:5px;
+    
     
 }
