--- a/src/Component/SinglePage/index.css
+++ b/src/Component/SinglePage/index.css
@@ -8,6 +8,12 @@
 .desc{
     font-weight: bold;
 }
+.social-media-button{
+    display: flex;
+    gap:10px;
+    width:100px;
+    color:blue;
+}
 
 
 .sub-images{
