--- a/src/Component/Header/index.css
+++ b/src/Component/Header/index.css
@@ -6,10 +6,20 @@
     grid-template-columns: 10rem 1fr 2fr 1fr 10rem;
     justify-content: space-between;
     background-color: rgb(53, 50, 50)  ;
+    position: sticky;
+    z-index: 100;
+    top:0;
+
 }
 .icon-container {
     width: 40px; /* Adjust the width as per your requirement */
     height: 40px; /* Adjust the height as per your requirement */
+  }
+  .dropdown-content{
+    background-color: black;
+    color:white;
+    height: auto;
+    width: fit-content;
   }
   
 nav .navbar-brand{
@@ -38,14 +48,19 @@ nav .navbar-brand{
 }
 .icon-container ul{
     
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    display:flex;
+    align-items: flex-end;
+    
+    
+   
 }
 .icon-space{
     background-color: rgb(176, 167, 154);
     padding: 8px;
     border-radius: 2px;
+    margin: 10px;
+   display: flex;
+   align-self: flex-end;
 }
 
 
@@ -59,5 +74,58 @@ nav ul li .nav-link{
     font-weight: bold;
 
 }
+/* Existing CSS styles... */
+
+/* Hamburger menu */
+.hamburger-menu {
+    display: none;
+    cursor: pointer;
+  }
+  
+  .bar {
+    width: 25px;
+    height: 3px;
+    background-color: #fff;
+    margin: 5px 0;
+    transition: transform 0.2s;
+  }
+  
+  /* Media query for mobile devices */
+  @media (max-width: 768px) {
+    /* Existing CSS styles... */
+  
+    /* Show the hamburger menu when the screen size is smaller */
+    .hamburger-menu {
+      display: block;
+    }
+    
+    .nav-link ul li{
+      display: none;
+    }
+  
+    /* Hide the navigation links by default */
+    .menu-links {
+      display: none;
+    }
+  
+    /* Show the navigation links when the hamburger menu is open */
+    .menu-links.open {
+      display: block;
+    }
+  
+    /* Rotate the bars to create the 'X' shape when the menu is open */
+    .menu-links.open .bar:nth-child(1) {
+      transform: translateY(8px) rotate(-45deg);
+    }
+  
+    .menu-links.open .bar:nth-child(2) {
+      opacity: 0;
+    }
+  
+    .menu-links.open .bar:nth-child(3) {
+      transform: translateY(-8px) rotate(45deg);
+    }
+  }
+  
 
 
