--- a/src/Component/Product/index.css
+++ b/src/Component/Product/index.css
@@ -8,8 +8,8 @@
   }
   
   .image {
-    width: 100%; /* Set the image width to occupy the entire width of the card */
-    height: auto; /* Automatically adjust the height based on the image aspect ratio */
+    width: 300px; /* Set the image width to occupy the entire width of the card */
+    height:300px ; /* Automatically adjust the height based on the image aspect ratio */
   }
   
   .button{
