--- a/src/Component/SinglePage/index.css
+++ b/src/Component/SinglePage/index.css
@@ -14,6 +14,26 @@
     width:100px;
     color:blue;
 }
+.color-indicator {
+    display: inline-block;
+    position: relative;
+    padding-left: 25px; /* Space for the color indicator */
+    line-height: 1;
+    border-radius: 50%;
+  }
+  
+  .color-indicator::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    
+    
+    background-color: inherit;
+     /* Adjust the distance between the color indicator and text */
+  }
+  
 
 
 .sub-images{
